# RamJet

./: README.md
client/: package-lock.json  package.json
client/app/: page.tsx
client/app/api/session/: route.ts
client/app/auth/login/: page.tsx
client/app/auth/register/: page.tsx
client/app/components/layout/: input.tsx  navBar.tsx
client/app/components/ui/: button.tsx  input.tsx  logo.tsx
client/app/lib/: encryptor..ts  fetchrequests.ts  session.ts
server/: data.sql
server/ramjet-auth/: Cargo.toml  README.md
server/ramjet-auth/src/: main.rs
server/ramjet-auth/src/lib/: jwt.rs
server/ramjet-auth/src/routes/: auth.rs  keys.rs  mod.rs
server/ramjet-auth/src/types/: keys_types.rs  mod.rs  user_type.rs
server/ramjet-auth/src/utils/: hasher.rs  jwt.rs  key_gen.rs  mod.rs
server/ramjet-nigeria/: Cargo.toml
