[package]
name = "ramjet-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5.3"
password-hash = "0.5"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "mysql",
    "macros",
    "time"
] }
dotenvy = "0.15"
rand = "0.10.1"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
chrono = "0.4"